--- a/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -23,7 +23,7 @@
                     <a href="{% url 'new_entry' %}">Create New Page</a>
                 </div>
                 <div>
-                    <a href="/wiki/{{ 'random_entry' }}">Random Page</a>
+                    <a href=" {% url 'random_entry' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
