--- a/wiki/encyclopedia/templates/encyclopedia/new_entry.html
+++ b/wiki/encyclopedia/templates/encyclopedia/new_entry.html
@@ -5,7 +5,7 @@
 <form action="{% url 'new_entry' %}" method="post">
     {% csrf_token %}
 
-    {{ form }}
+    {{ form.as_p }}
     <input action="" type="submit" value="Add entry">
 </form>
 {% endblock %}
